<resources>
    <string name="app_name">LocationTracker</string>
    <string name="start">start</string>
    <string name="search_number">Search Number</string>
    <string name="county_info">COUNTY INFO</string>
    <string name="gps_route">GPS ROUTE</string>
    <string name="traffic_near">Traffic Near</string>
    <string name="voice_navigation">Voice Navigation</string>
    <string name="lbl_official_name">Official Name</string>
    <string name="region">Region</string>
    <string name="current_gps_location">Current Gps Location</string>
    <string name="longitude">Longitude</string>
    <string name="current_postal_address">Current Postal Address</string>
    <string name="current_city">Current City</string>
    <string name="current_country">Current Country</string>
    <string name="current_address">Current Address</string>
    <string name="view_on_map">View on map</string>
    <string name="sms">SMS</string>
    <string name="un_named">Un Known</string>
    <string name="lbl_enter_valid_mobile_numbewr">Mobile number is not valid</string>
    <string name="ration_call">This app need access your call phone permssions</string>
    <string name="edit">Edit</string>
    <string name="read_contacts">app required readContacts permission</string>
    <string name="your_location">Your Location</string>
    <string name="please_enter_start_location">Please enter start location</string>
    <string name="please_enter_dest_location">Please enter destination location</string>
    <string name="location_permission">Please give us location permission</string>
    <string name="contacts_permission">Please give us read contacts permission for access contacts listing</string>
</resources>