<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:forceDarkAllowed="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_grey"
    tools:context=".Activity.HomeScreenActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:titleTextColor="@color/white"
        android:id="@+id/tb"
        android:background="@color/purple_200"
        android:layout_height="wrap_content"/>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/tb"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSearchNumber"
            style="@style/textBold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_round"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/search_number"
            android:textColor="@color/white"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnCountryInfo"
            style="@style/textBold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_round"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/county_info"
            android:textColor="@color/white"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb" />
    </LinearLayout>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/ll1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnTraficNear"
            style="@style/textBold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_round"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/traffic_near"
            android:textColor="@color/white"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnGpsRoute"
            style="@style/textBold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_round"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/gps_route"
            android:textColor="@color/white"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb" />
    </LinearLayout>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/ll2"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnMyLocation"
            style="@style/textBold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_round"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/white"
            android:text="My Location"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnContacts"
            style="@style/textBold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_round"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Contacts"
            android:textColor="@color/white"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb" />
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/ll3"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>